# IntentDOT

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/rust-risk-engine/: .gitignore  Cargo.toml  Makefile  contract.polkavm
contracts/rust-risk-engine/.cargo/: config.toml
contracts/rust-risk-engine/src/: main.rs
contracts/script/: Deploy.s.sol  DeployV2.s.sol  DeployV3.s.sol  SeedPools.s.sol
contracts/src/: IRiskEngine.sol  IntentExecutor.sol  MockDEX.sol  MockERC20.sol  TokenFactory.sol
contracts/test/: IntentDOT.t.sol  RiskEngine.t.sol  TokenFactory.t.sol
docs/: ARCHITECTURE.md  HYPOTHESIS.md  RUNBOOK.md  SCOPE.md  SECURITY.md  TASKS.yaml  TESTPLAN.md  index.html  pitch-evm.html  pitch-pvm.html
frontend/: jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/__tests__/: bridge-flow.test.ts  contracts.test.ts  e2e-testnet.test.ts  integration-flow.test.ts  intent-validator.test.ts  preview-builder.test.ts  risk-display.test.ts  risk-guardian.test.ts  xcm-encoder.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BridgePreview.tsx  BridgeReceipt.tsx  Chat.tsx  ConnectWallet.tsx  PoolInfo.tsx  PortfolioDashboard.tsx  Sparkline.tsx  SwapReceipt.tsx  TokenCreatePreview.tsx  TokenCreateReceipt.tsx  TransactionHistory.tsx  TransactionPreview.tsx  TransferPreview.tsx  TransferReceipt.tsx
frontend/src/hooks/: useBridgeExecution.ts  usePoolReserves.ts  useSwapExecution.ts  useTokenCreation.ts  (+2 more)
scripts/: check.sh
(+11 files in other folders)
