[package]
name = "risk-engine"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84"

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm-derive = { version = "=0.26.0" }
uapi = { package = "pallet-revive-uapi", version = "=0.6.0", default-features = false }
